Commit: fixed overflow in the desktop resolution, fixed components etc

--- a/plc_monitoring_frontend/static/styles/base.css
+++ b/plc_monitoring_frontend/static/styles/base.css
@@ -2,7 +2,7 @@
   /* Sidebar */
   --sidebar-width: 200px;
   --sidebar-collapsed-width: 60px;
-  --sidebar-margin: 20px;
+  --sidebar-margin: 10px;
 
   /* Colores para sidebar */
   --sidebar-bg: #ffffff;
@@ -22,13 +22,13 @@
 /* === SIDEBAR === */
 #sidebar {
   box-sizing: border-box;
-  height: 92.5vh;
+  height: 93.5vh;
   width: var(--sidebar-width);
   margin: var(--sidebar-margin);
   padding: 5px 1em;
   background-color: var(--sidebar-bg);
   color: #000;
-  border-radius: 12px;
+  border-radius: 10px;
   position: sticky;
   top: var(--sidebar-margin);
   align-self: start;
@@ -226,7 +226,6 @@
     transform: translateX(calc(-200% - var(--sidebar-margin)));
     z-index: 1000;
   }
-
   #sidebar.open {
     transform: translateX(0);
   }
@@ -237,13 +236,20 @@
 }
 
 
-*{
+table{
   user-select: none;
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none;    /* Firefox */
   -ms-user-select: none;     /* IE10+/Edge */
 }
-
-body {
-  overflow: hidden;
+a {
+  user-select: auto !important;
+  pointer-events: auto !important;
+  cursor: pointer;
+}
+@media (min-width: 992px){
+  body{
+    overflow-y: hidden;
+  }
+  
 }
