--- a/plc_monitoring_frontend/static/styles/components/card_table_records.css
+++ b/plc_monitoring_frontend/static/styles/components/card_table_records.css
@@ -20,15 +20,13 @@
 .container {
   width: fit-content;
   background-color: #f2f2f2;
-  margin: 10px;
+  margin: 4px;
   border-radius: 0.5em;
   text-align: start;
   font-size: 0.75rem; /* tamaño de fuente más pequeño */
 }
 
-table, th, td {
-  padding: 6px 6px; /* reducido desde 10px */
-}
+
 
 .table-charge {
   width: 100%;               /* se adapta al ancho del container */
@@ -50,7 +48,6 @@ table, th, td {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(400px, 100%), 1fr)); /* menor min width */
   gap: 10px;
-  padding: 5px;
   align-items: center;
 }
 
